--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://rishmamurugan.github.io/personal-website"
+  "homepage": "https://rishmamurugan.github.io"
 }
